--- a/package.json
+++ b/package.json
@@ -13,9 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.5",
     "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "sequelize": "^6.5.1"
+    "pg": "^8.5.1",
+    "puppeteer": "^8.0.0",
+    "sequelize": "^6.5.1",
+    "tiktok-app-api": "^1.4.1",
+    "tiktok-signature": "^1.1.10"
   }
 }
