ran pip freeze to see if that helps

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,37 @@
-google-cloud-bigquery
-requests
-selenium
-selenium-stealth
-spotipy
-playwright-python
-TikTokApi
+cachetools==4.2.1
+certifi==2020.6.20
+cffi==1.14.5
+chardet==4.0.0
+google-api-core==1.26.1
+google-auth==1.28.0
+google-cloud-bigquery==2.12.0
+google-cloud-core==1.6.0
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.53.0
+greenlet==1.0.0
+grpcio==1.36.1
+idna==2.10
+packaging==20.9
+pip==20.2.4
+playwright==1.9.2
+proto-plus==1.18.0
+protobuf==3.15.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyee==8.1.0
+pyparsing==2.4.7
+python-dotenv==0.15.0
+pytz==2021.1
+requests==2.25.1
+rsa==4.7.2
+selenium==3.141.0
+selenium-stealth==1.0.6
+setuptools==50.3.0.post20201006
+six==1.15.0
+spotipy==2.17.1
+TikTokApi==3.9.3
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+wheel==0.35.1
